<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/app_color_error_container"
    android:layout_margin="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="14dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:contentDescription="@string/image_content_desc"
            android:scaleType="centerCrop"
            android:id="@+id/iv_pict_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_ayam_geprek"
            android:layout_width="110dp"
            android:layout_height="100dp"/>
        <TextView
            android:id="@+id/tv_confirm_name_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/text_nama"
            app:layout_constraintStart_toEndOf="@id/iv_pict_menu"/>
        <TextView
            android:id="@+id/tv_confirm_harga_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/text_harga"
            app:layout_constraintStart_toEndOf="@id/iv_pict_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_name_menu"/>

        <ImageView
            android:id="@+id/iv_delete"
            android:contentDescription="@string/image_content_desc"
            android:layout_width="35dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="35dp"
            android:src="@drawable/ic_delete"/>


            <TextView
                android:textStyle="bold"
                android:layout_margin="12dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/tv_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_jumlah" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>